# ITMO

hi/: hw3.cabal
hi/app/: Main.hs
hi/src/HW3/: Action.hs  Base.hs  Evaluator.hs  Parser.hs  Pretty.hs
parser-generator/: build.gradle.kts
parser-generator/src/main/antlr/: InputGrammar.g4
parser-generator/src/main/kotlin/: Base.kt  LexerGenerator.kt  Main.kt  ParserGenerator.kt
parser-generator/src/test/kotlin/: ParserGeneratorTests.kt  calc_grammar.txt  lab2_grammar.txt
proof-checker/: Makefile
proof-checker/src/: Main.java
proof-checker/src/expression/: Addition.java  BinaryOperation.java  Conjunction.java  Disjunction.java  Equals.java  ExistsQuantifier.java  ForallQuantifier.java  Implication.java  Multiplication.java  Negation.java  Next.java  Quantifier.java  UnaryOperation.java  Variable.java
proof-checker/src/parser/: ExpressionParser.java
proof-checker/src/proof/: ProofChecker.java  ProofCheckerException.java
