name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw3#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     HW3.Base HW3.Parser HW3.Pretty HW3.Evaluator HW3.Action
  ghc-options:         -Wall
  build-depends:
    base >= 4.9 && < 5,
    megaparsec,
    prettyprinter, 
    prettyprinter-ansi-terminal,
    scientific,
    transformers,
    haskeline, 
    parser-combinators, 
    text, 
    containers, 
    bytestring, 
    zlib, 
    serialise, 
    directory,
    time, 
    random
  default-language:    Haskell2010

executable hi
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:
    base >= 4.9 && < 5,
    megaparsec,
    containers,
    transformers,
    prettyprinter,
    haskeline,
    hw3
  default-language:    Haskell2010